# advent-of-code

./: README.md
2024/day1/: .gitignore  day1.py  pyproject.toml
2024/day1/utils/: logger.py
2024/day2/src/: main.go
