[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Adam <adamwawerski30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
advent-of-code-data = "^2.0.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
